Added directive for tooltip

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,3 +1,19 @@
 <div class="container">
     <h1>Hello ninjas!</h1>
+    <p>Here you could see tooltip examples</p>
+
+    <div class="row">
+        <div class="col-xs-3">
+            <span ninja-tooltip="Top ninja tooltip" ninja-tooltip-position="top">Hello top</span>
+        </div>
+        <div class="col-xs-3">
+            <span ninja-tooltip="Right ninja tooltip" ninja-tooltip-position="right">Hello right</span>
+        </div>
+        <div class="col-xs-3">
+            <span ninja-tooltip="Bottom ninja tooltip" ninja-tooltip-position="bottom">Hello bottom</span>
+        </div>
+        <div class="col-xs-3">
+            <span ninja-tooltip="Left ninja tooltip" ninja-tooltip-position="left">Hello left</span>
+        </div>
+    </div>
 </div>
